--- a/assets/css/allQuestion.css
+++ b/assets/css/allQuestion.css
@@ -32,5 +32,11 @@
 .line{
     background-color: darkgray;
     height: 1px;
-    width: 100%;
+    width: 65%;
+    margin: auto;
+    margin-bottom: 2%;
+}
+
+.askQuestion{
+    margin-right: 4%;
 }
