--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,10 +71,18 @@
 /* Fin Formulaire */
 
 /* Contenu d'une seule question */
-.paragraphQuestion{
+.paragraphQuestion, .contentOfQuestion{
     padding: 3%;
+}
+.paragraphQuestion{
     border-radius: 8px;
     background-color: #ffa50061;
+}
+
+.contentOfQuestion{
+    background-color: #dcdcdc;
+    border: black 1px dashed;
+    border-radius: 6px;
 }
 
 .notificationLoginIn{
